trying to fix the image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </nav>
-    <header class="masthead">
+    <header class="masthead" style = "background-image: url(assets/img/sky.jpg);">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
