trying to fix images not showing up

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
         <p>I enjoy drawing and painting as a creative and fun outlet. These are some pieces I've made recently!</p>
         <div class = "masonry" id = "artphotos">
             <img class = "grid-item"  src = "assets/img/art/1.jpg">
-            <img class = "grid-item"  src = "assets/img/art/3.jpg">
-            <img class = "grid-item"  src = "assets/img/art/2.jpg">
-            <img class = "grid-item"  src = "assets/img/art/4.jpg">
-            <img class = "grid-item"  src = "assets/img/art/5.jpg">
+            <img class = "grid-item"  src = "assets/img/art/3.JPG">
+            <img class = "grid-item"  src = "assets/img/art/2.JPG">
+            <img class = "grid-item"  src = "assets/img/art/4.JPG">
+            <img class = "grid-item"  src = "assets/img/art/5.JPG">
         </div>
     </section>
     <section id="contact" class="text-center" style="background-color: #DEF2FD;">
