--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="about" class="text-center">
         <h1>About Me</h1>
         <div class="about">
-            <div class="image-wrapper" style="margin: 15px;" data-entrance = "from-left"><img class="rounded-circle" src="assets/img/purple-sweater.JPG" style="max-width: 300px;width: 100%; text-align: center; vertical-align: middle; height: 100%; "></div>
+            <div class="image-wrapper" style="margin: 15px;" data-entrance = "from-left"><img class="rounded-circle" src="assets/img/purple-sweater.JPG"></div>
             <div  data-entrance = "from-right" style="padding: 15px; width: 100%; vertical-align: middle; height: 100%; display: inline-block;">
                 <p style = "vertical-align: middle; height: 100%;">Hi! I'm Sahar (she/her), and I love solving problems through code and finding patterns in data. I'm currently a sophomore at Cornell University majoring in computer science. My main interests within tech are backend development, machine learning, and data science. Outside of tech, I enjoy painting, drawing, and listening to music. I care about making a positive impact through my work, whether I'm helping one person or one thousand. I'm also energized by working with cutting-edge technology.<br>
             </div>
