changing buttons to see if they look right on mobile (safari)

--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
                     <h1>Contact Me</h1>
                     <p>I'm currently looking for Summer 2021 internships in software engineering or data science. I would also love to connect with other passionate individuals. Get in touch with me or check out some of my other work at with one of my online profiles!</p>
                     <ul class="list-inline banner-social-buttons">
-                        <li class="list-inline-item">&nbsp;<a class="btn contact-btn" type="button" href = "https://www.linkedin.com/in/sahar-sami/" target="_blank"><i class="fa fa-linkedin-square fa-fw"></i><span class="network-name">&nbsp;LINKEDIN</span></a></li>
-                        <li class="list-inline-item">&nbsp;<a class="btn contact-btn" type="button" href = "mailto: sahar.sami115@gmail.com" target="_blank"><i class="fa fa-envelope fa-fw"></i><span class="network-name">&nbsp;EMAIL</span></a></li>
-                        <li class="list-inline-item">&nbsp;<a class="btn contact-btn" type="button" href="https://github.com/sahar-sami" target="_blank"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;GITHUB</span></a></li>
-                        <li class="list-inline-item">&nbsp;<a class="btn contact-btn" type="button" href="https://twitter.com/sahar_sxmi" target="_blank"><i class="fa fa-twitter fa-fw"></i><span class="network-name">&nbsp;TWITTER</span></a></li>
+                        <li class="list-inline-item">&nbsp;<a class="btn btn-secondary" type="button" href = "https://www.linkedin.com/in/sahar-sami/" target="_blank"><i class="fa fa-linkedin-square fa-fw"></i><span class="network-name">&nbsp;LINKEDIN</span></a></li>
+                        <li class="list-inline-item">&nbsp;<a class="btn btn-secondary" type="button" href = "mailto: sahar.sami115@gmail.com" target="_blank"><i class="fa fa-envelope fa-fw"></i><span class="network-name">&nbsp;EMAIL</span></a></li>
+                        <li class="list-inline-item">&nbsp;<a class="btn btn-secondary" type="button" href="https://github.com/sahar-sami" target="_blank"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;GITHUB</span></a></li>
+                        <li class="list-inline-item">&nbsp;<a class="btn btn-secondary" type="button" href="https://twitter.com/sahar_sxmi" target="_blank"><i class="fa fa-twitter fa-fw"></i><span class="network-name">&nbsp;TWITTER</span></a></li>
                     </ul>
                     <button id = "resume-toggle" class = "btn btn1" type = "button" data-toggle = "collapse" href = "#resume-pdf" onclick = "toggle()" style = "margin-bottom: 10px; font-size: 20px;">VIEW RESUME</button>
                         <object class = "collapse" id = "resume-pdf" data="assets/Sahar-Sami-Resume-Main.pdf" type="application/pdf" width="100%" height="800px"> 
